Fix logo display on Firefox

--- a/src/assets/sass/layout/brand.scss
+++ b/src/assets/sass/layout/brand.scss
@@ -11,7 +11,6 @@
 
 .brand {
   display: block;
-  float: left;
 
   img {
     max-width: 400px;
